Fix hands-off enrollment OOBE flow.

Automatically continue from welcome to network screen when hands-off
enrollment is in progress.

This fixes the regression introduced by split of welcome screen into
welcome and network screen:
https://chromium-review.googlesource.com/c/chromium/src/+/1139586

Bug: 886919
Test: HandsOffEnrollmentTest + manually
Change-Id: I9f5fe438c5dd7284973e76728c4204b4cad2ea52
Reviewed-on: https://chromium-review.googlesource.com/1236662
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Sergey Poromov <poromov@chromium.org>
Commit-Queue: Aga Wronska <agawronska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593573}