chrome/browser/chromeos/login/screens/welcome_screen.cc
@@ -19,6 +19,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/chromeos/login/screens/screen_exit_code.h"
 #include "chrome/browser/chromeos/login/screens/welcome_view.h"
 #include "chrome/browser/chromeos/login/ui/input_events_blocker.h"
+#include "chrome/browser/chromeos/login/wizard_controller.h"
 #include "chrome/browser/chromeos/system/timezone_util.h"
 #include "chrome/browser/profiles/profile_manager.h"
 #include "chrome/browser/ui/webui/chromeos/login/l10n_util.h"
@@ -155,8 +156,12 @@ void WelcomeScreen::Show() {
   if (!timezone_subscription_)
     InitializeTimezoneObserver();
 
-  if (view_)
+  // Automatically continue if we are using hands-off enrollment.
+  if (WizardController::UsingHandsOffEnrollment()) {
+    OnUserAction(kUserActionContinueButtonClicked);
+  } else if (view_) {
     view_->Show();
+  }
 }
 
 void WelcomeScreen::Hide() {
